# yew-tauri-desktop-app-template

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Trunk.toml  index.html  trunk.toml
src/: app.rs  layout.rs  main.rs  route.rs
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
src/layout/: footer.rs  header.rs
