[package]
name = "desktop-app-template"
version = "0.1.0"
authors = ["usa <usagrada@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {git = "https://github.com/yewstack/yew", branch = "master"}
yew-router = { git = "https://github.com/yewstack/yew", branch="master" }