[package]
name = "desktop-app-template"
version = "0.1.0"
authors = ["usa <usagrada@users.noreply.github.com>"]
edition = "2018"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[dependencies]
yew = {git = "https://github.com/yewstack/yew", branch = "master"}
yew-router = { git = "https://github.com/yewstack/yew", branch="master" }